--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -966,6 +966,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = auto[[col for col in auto.columns if col not in ['mpg']]]\n",
+    "y = auto['mpg']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -976,11 +989,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "auto_model = LinearRegression().fit(X_train, y_train)\n"
    ]
   },
   {
