--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "((442, 10), (442,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,12 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn import linear_model"
    ]
   },
   {
@@ -252,12 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "diabetes_model = LinearRegression()"
+    "diabetes_model = linear_model.LinearRegression()"
    ]
   },
   {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "         7.43519617e+02,  7.60951722e+01]))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "53.86610852888564"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +431,8 @@
       "Dep. Variable:                      y   R-squared:                       0.512\n",
       "Model:                            OLS   Adj. R-squared:                  0.500\n",
       "Method:                 Least Squares   F-statistic:                     43.16\n",
-      "Date:                Wed, 24 Jul 2019   Prob (F-statistic):           4.64e-58\n",
-      "Time:                        18:05:27   Log-Likelihood:                -2281.1\n",
+      "Date:                Thu, 25 Jul 2019   Prob (F-statistic):           4.64e-58\n",
+      "Time:                        16:31:44   Log-Likelihood:                -2281.1\n",
       "No. Observations:                 422   AIC:                             4584.\n",
       "Df Residuals:                     411   BIC:                             4629.\n",
       "Df Model:                          10                                         \n",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,24 +536,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horse_power</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"chevrolet chevelle malibu\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"buick skylark 320\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"plymouth satellite\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"amc rebel sst\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"ford torino\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(398, 8)"
+       "    mpg  cylinders  displacement  horse_power  weight  acceleration  \\\n",
+       "0  18.0          8         307.0        130.0    3504          12.0   \n",
+       "1  15.0          8         350.0        165.0    3693          11.5   \n",
+       "2  18.0          8         318.0        150.0    3436          11.0   \n",
+       "3  16.0          8         304.0        150.0    3433          12.0   \n",
+       "4  17.0          8         302.0        140.0    3449          10.5   \n",
+       "\n",
+       "   model_year                       car_name  \n",
+       "0          70  \\t\"chevrolet chevelle malibu\"  \n",
+       "1          70          \\t\"buick skylark 320\"  \n",
+       "2          70         \\t\"plymouth satellite\"  \n",
+       "3          70              \\t\"amc rebel sst\"  \n",
+       "4          70                \\t\"ford torino\"  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "auto.head()\n",
-    "auto.shape"
+    "auto.head()"
    ]
   },
   {
@@ -565,31 +665,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "mpg             float64\n",
-       "cylinders         int64\n",
-       "displacement    float64\n",
-       "horse_power     float64\n",
-       "weight            int64\n",
-       "acceleration    float64\n",
-       "model_year        int64\n",
-       "car_name         object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 398 entries, 0 to 397\n",
+      "Data columns (total 8 columns):\n",
+      "mpg             398 non-null float64\n",
+      "cylinders       398 non-null int64\n",
+      "displacement    398 non-null float64\n",
+      "horse_power     392 non-null float64\n",
+      "weight          398 non-null int64\n",
+      "acceleration    398 non-null float64\n",
+      "model_year      398 non-null int64\n",
+      "car_name        398 non-null object\n",
+      "dtypes: float64(4), int64(3), object(1)\n",
+      "memory usage: 25.0+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Your code here:\n",
-    "auto.dtypes"
+    "auto.info()"
    ]
   },
   {
@@ -601,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +719,7 @@
        "Name: model_year, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +769,7 @@
        "Name: cylinders, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +896,7 @@
        "4          70  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,10 +917,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "X=[\"cylinders\", \"displacement\", \"horse_power\", \"weight\", \"acceleration\", \"model_year\"]\n",
-    "y= \"mpg\"\n",
+    "X=auto_clean[[\"cylinders\", \"displacement\", \"horse_power\", \"weight\", \"acceleration\", \"model_year\"]]\n",
+    "y= auto_clean[\"mpg\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(auto_clean[X], auto_clean[y], test_size=0.20)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)"
    ]
   },
   {
@@ -833,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -842,13 +943,14 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "auto_model = LinearRegression()\n",
     "auto_model.fit(X_train, y_train)"
    ]
@@ -879,16 +981,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8190883633965697"
+       "0.8099265320241501"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,16 +1015,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7725594342416291"
+       "0.803968977340696"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1083,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,16 +1103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8123350480605002"
+       "0.8042370056869195"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,16 +1132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7720436628417394"
+       "0.8424039482884845"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,13 +1181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "model = LinearRegression()\n",
-    "auto_model = RFE(model, n_features_to_select=3, step=1)"
+    "selector = RFE(auto_model, n_features_to_select=3)"
    ]
   },
   {
@@ -1097,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1111,9 +1211,9 @@
    ],
    "source": [
     "# Your code here:\n",
-    "auto_model.fit(X_train, y_train)\n",
-    "print(auto_model.ranking_)\n",
-    "print([X[i] for i, chosen in enumerate(auto_model.support_) if chosen])"
+    "selector.fit(X_train, y_train)\n",
+    "print(selector.ranking_)\n",
+    "print([X[i] for i, chosen in enumerate(selector.support_) if chosen])"
    ]
   },
   {
@@ -1127,11 +1227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "Xreduced=X[X.columns[selector.support_]]\n",
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(Xreduced, y, test_size=0.2)"
    ]
   },
   {
@@ -1143,11 +1245,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here: \n"
+    "# Your code here: \n",
+    "auto_model_reduced = LinearRegression().fit(X_train_reduced, y_train_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here: \n",
+    "auto_model_reduce=LinearRegression()\n",
+    "auto_model_reduce.fit(X_train_reduced,y_train_reduced)"
    ]
   },
   {
