--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -504,7 +504,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.500\n",
       "Method:                 Least Squares   F-statistic:                     43.16\n",
       "Date:                Thu, 25 Jul 2019   Prob (F-statistic):           4.64e-58\n",
-      "Time:                        12:17:00   Log-Likelihood:                -2281.1\n",
+      "Time:                        16:51:35   Log-Likelihood:                -2281.1\n",
       "No. Observations:                 422   AIC:                             4584.\n",
       "Df Residuals:                     411   BIC:                             4629.\n",
       "Df Model:                          10                                         \n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
     "\n",
     "X = auto[[col for col in auto.columns if col not in ['mpg']]]\n",
     "y = auto['mpg']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n"
    ]
   },
   {
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,11 +1022,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8195091213240855"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "y_pred = auto_model.predict(X_train)\n",
+    "r2_score(y_train, y_pred)\n"
    ]
   },
   {
@@ -1042,11 +1056,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7619261488345411"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_test_pred = auto_model.predict(X_test)\n",
+    "r2_score(y_test, y_test_pred)\n"
    ]
   },
   {
@@ -1071,11 +1097,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_train09, X_test09,y_train09, y_test09 = train_test_split(X, y, test_size = 0.1)\n"
    ]
   },
   {
@@ -1087,11 +1113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "auto_model09 = LinearRegression().fit(X_train09, y_train09)\n"
    ]
   },
   {
@@ -1103,11 +1129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.806972970419553"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_pred09 = auto_model.predict(X_train09)\n",
+    "r2_score(y_train09, y_pred09)\n"
    ]
   },
   {
@@ -1119,11 +1157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8050613657277896"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_test_pred09 = auto_model.predict(X_test09)\n",
+    "r2_score(y_test09, y_test_pred09)\n"
    ]
   },
   {
@@ -1139,11 +1189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_selection import RFE"
+    "from sklearn.feature_selection import RFE\n"
    ]
   },
   {
@@ -1155,11 +1205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "selector = RFE(auto_model, 3, step = 1)\n"
    ]
   },
   {
@@ -1171,11 +1221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 3, 1, 1])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "selector = selector.fit(X_train, y_train) \n",
+    "selector.ranking_\n"
    ]
   },
   {
@@ -1189,11 +1251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selector.support_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_reduced = X[X.columns[selector.support_]]\n",
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(X_reduced, y, test_size = 0.2)\n"
    ]
   },
   {
@@ -1205,11 +1288,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7214280882625677"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here: \n"
+    "auto_model_reduced = LinearRegression().fit(X_train_reduced, y_train_reduced)\n",
+    "y_test_pred_reduced = auto_model_reduced.predict(X_test_reduced)\n",
+    "r2_score(y_test_reduced, y_test_pred_reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, it improved the r squared score"
    ]
   },
   {
